--- a/src/components/BrandCard/brandcard.scss
+++ b/src/components/BrandCard/brandcard.scss
@@ -5,6 +5,9 @@
   background-color: #2e7cf6;
   height: 405px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   img {
     position: absolute;
     top: 0;
@@ -12,6 +15,7 @@
     bottom: 0;
     right: 0;
     padding: 20px;
+    height: 100%;
   }
   .card-close {
     span,
@@ -20,13 +24,23 @@
       background-color: white;
     }
   }
-  @media screen and (max-width: 908px) { 
+  @media screen and (max-width: 908px) {
     height: 340px;
+  }
+  @media screen and (max-width: 767px) {
+    img {
+      position: static;
+      padding: 10px;
+    }
+    height: 213px;
   }
 }
 .brand-card.add-card {
-  background-color: #DADADA;
+  background-color: #dadada;
   img {
     padding: 130px;
+    @media screen and (max-width: 767px) {
+      padding: 20px;
+    }
   }
 }
