--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -3,9 +3,10 @@
 body * {
   font-family: Montserrat;
   font-style: normal;
-
 }
-
+.app {
+  overflow-x: hidden;
+}
 a {
   // margin-right: 30px;
   text-decoration: none;
