--- a/src/pages/archive.scss
+++ b/src/pages/archive.scss
@@ -50,11 +50,27 @@
       right: -180px;
       top: 70vh;
     }
+
+    @media screen and (max-width: 767px) {
+      .archive-background__item_1 {
+        top: 255px;
+        left: -170px;
+      }
+      .archive-background__item_2 {
+        top: 205px;
+        right: -130px;
+        transform: rotate(180deg);
+        opacity: 0.7;
+      }
+      .archive-background__item_5 {
+        right: -390px;
+      }
+    }
   }
 
   .archive-page__content {
     margin: auto;
-    max-width: 1285px;
+    max-width: 1298px;
     padding-top: 20px;
     h1 {
       text-align: center;
@@ -70,9 +86,9 @@
       justify-content: space-between;
       .brands-list__item {
         width: 415px;
+        margin: 6px;
         margin-bottom: 50px;
         z-index: 2;
-        margin: 6px;
       }
       .brands-list__item-enter {
         opacity: 0;
@@ -109,6 +125,22 @@
       max-width: 740px;
       .brands-list .brands-list__item {
         width: 350px;
+      }
+    }
+    @media screen and (max-width: 767px) {
+      .brands-list {
+        padding: 0 10px;
+        .brands-list__item {
+          width: 45%;
+          margin-bottom: 25px;
+        }
+        .brands-list__btn {
+          // width: 100%;
+          height: 30px;
+          font-size: 12px;
+          line-height: 0;
+          margin-top: 5px;
+        }
       }
     }
   }
